[package]
name = "mini-oidc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
argon2 = "0.5.0"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.18", features = ["macros", "headers"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
base62 = "2.0.2"
chrono = "0.4.26"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
openidconnect = { version = "3.2.0", default-features = false, features = ["rustls-tls"] }
password-hash = "0.5.0"
problemdetails = { version = "0.2.1", features = ["axum"] }
rand = "0.8.5"
rsa = "0.9.2"
serde = { version = "1.0.166", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio", "tls-rustls", "time"] }
thiserror = "1.0.41"
time = "0.3.22"
tokio = { version = "1.29.1", features = ["full"] }
tower = { version = "0.4.13", features = ["steer"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.0", features = ["serde"] }

[profile.dev]
lto = "off"
